--- a/practice02/src/components/User/User.css
+++ b/practice02/src/components/User/User.css
@@ -1,32 +1,26 @@
-.Wrapper {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.user-form {
-  margin-top: 50px;
-  width: 70%;
-  background-color: rgb(253, 253, 251);
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  border-radius: 8px;
-}
-.user-form label {
-  color: rgb(65, 65, 65);
+.input {
+  margin: 2rem auto;
+  padding: 1rem;
+  width: 90%;
+  max-width: 40rem;
 }
 
-.user-form input {
-  width: 100%;
+.input label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
-.user-form button {
-  width: 100px;
-  margin-top: 20px;
-  height: 30px;
-  background-color: rgb(160, 74, 148);
-  border: 0;
-  border-radius: 3px;
-  color: azure;
-  cursor: pointer;
+.input input {
+  font: inherit;
+  display: block;
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 0.15rem;
+  margin-bottom: 0.5rem;
+}
+
+.input input:focus {
+  outline: none;
+  border-color: #4f005f;
 }
